--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio Web</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Rubik+Iso&display=swap" rel="stylesheet">
+  <style>
+.cordonome {
+  font-family:'Rubik Iso', cursive;
+  color: #ffffff;
+}
+#sobre-mim {
+  color: #588157;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: -1px;
+}
+#minhas-habilidades {
+  color: #a7c957;
+}
+body {
+  background-color: #001524;
+}
+ 
+  </style>
 </head>
 <body>
-    <h1 id="meu-nome" class="meuNome">Luan Dos Santos Rodrigues</h1>
+    <h1 id="meu-nome" class="meuNome cordonome">Luan Dos Santos Rodrigues</h1>
     <img id="minha-foto" width="300" src="eu.jpeg" alt="Foto de Luan">
-  <br><p= id="sobre-mim">Meu nome é Luan Santos, tenho 20 anos e nasci em Nova União,MG. <br> Filho da Celeste e do Nivaldo, busco a minha independência. <br> Atualmente sou estudande da trybe em desenvolvimento web </p>
-  <h2 id="minhas-habilidades">Minhas habilidades</h2>
+  <br><p= id="sobre-mim">Meu nome é Luan Santos, tenho 20 anos. <br> Sou brasileiro, nascido e criado Nova União-Minas Gerais. <br> Filho da Celeste e do Nivaldo, buscando minha independência e novas aventuras. Atualmente sou estudande da trybe em desenvolvimento web </p>
+  <br><h2 id="minhas-habilidades">Minhas habilidades</h2>
   <ul>
     <li>Boa comunicação</li>
     <li>Trabalho em equipe</li>
