--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio Web</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Rubik+Iso&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Montserrat+Subrayada:wght@700&family=Montserrat:ital,wght@1,600&family=Press+Start+2P&family=Rubik+Iso&display=swap" rel="stylesheet">
   <style>
 .cordonome {
   font-family:'Rubik Iso', cursive;
   color: #ffffff;
 }
 #sobre-mim {
-  color: #588157;
+  color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: -1px;
+  font-size: 20px;
 }
-#minhas-habilidades {
-  color: #a7c957;
+.minhas-habilidades {
+  color: #fcfcfc;
+  font-family: 'Press Start 2P', cursive;
+}
+.comunicação {
+font-size: 16px;
+} 
+.Trabalhoequipe {
+  font-size: 16px;
+} 
+.Proatividade {
+  font-size: 16px;
+}
+.Criatividade {
+  font-size: 16px;
 }
 body {
-  background-color: #001524;
+  background-color: #00afb9;
 }
  
   </style>
@@ -28,13 +42,13 @@ body {
 <body>
     <h1 id="meu-nome" class="meuNome cordonome">Luan Dos Santos Rodrigues</h1>
     <img id="minha-foto" width="300" src="eu.jpeg" alt="Foto de Luan">
-  <br><p= id="sobre-mim">Meu nome é Luan Santos, tenho 20 anos. <br> Sou brasileiro, nascido e criado Nova União-Minas Gerais. <br> Filho da Celeste e do Nivaldo, buscando minha independência e novas aventuras. Atualmente sou estudande da trybe em desenvolvimento web </p>
-  <br><h2 id="minhas-habilidades">Minhas habilidades</h2>
-  <ul>
-    <li>Boa comunicação</li>
-    <li>Trabalho em equipe</li>
-    <li>Proatividade</li>
-    <li>Criatividade</li>
+  <br><p= id="sobre-mim">Olá! eu sou Luan, tenho 20 anos. <br> <strong>brasileiro, nascido e criado Nova União-Minas Gerais (mineirinho uai).</strong> <br> Filho da Celeste e do Nivaldo, estou em busca da minha independência, de novas aventuras, sou fã de games e amo jogar vôlei. Atualmente sou estudande da trybe em desenvolvimento web </p>
+  <br><h2 class="minhas-habilidades">Minhas Habilidades</h2>
+  <ul id="habilidades">
+    <li class="comunicação">Boa comunicação</li>
+    <li class="Trabalhoequipe">Trabalho em equipe</li>
+    <li class="Proatividade">Proatividade</li>
+    <li class="Criatividade">Criatividade</li>
   </ul>
   <a href="#meu-nome">Meu Nome</a>
   <br><a href="#minha-foto">Minha Foto</a>
