--- a/index.html
+++ b/index.html
@@ -6,45 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio Web</title>
   <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Montserrat+Subrayada:wght@700&family=Montserrat:ital,wght@1,600&family=Press+Start+2P&family=Rubik+Iso&display=swap" rel="stylesheet">
-  <style>
-.cordonome {
-  font-family:'Rubik Iso', cursive;
-  color: #ffffff;
-}
-#sobre-mim {
-  color: #ffffff;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: -1px;
-  font-size: 20px;
-}
-.minhas-habilidades {
-  color: #fcfcfc;
-  font-family: 'Press Start 2P', cursive;
-}
-.comunicação {
-font-size: 16px;
-} 
-.Trabalhoequipe {
-  font-size: 16px;
-} 
-.Proatividade {
-  font-size: 16px;
-}
-.Criatividade {
-  font-size: 16px;
-}
-body {
-  background-color: #00afb9;
-}
- 
-  </style>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="meu-nome" class="meuNome cordonome">Luan Dos Santos Rodrigues</h1>
-    <img id="minha-foto" width="300" src="eu.jpeg" alt="Foto de Luan">
-  <br><p= id="sobre-mim">Olá! eu sou Luan, tenho 20 anos. <br> <strong>brasileiro, nascido e criado Nova União-Minas Gerais (mineirinho uai).</strong> <br> Filho da Celeste e do Nivaldo, estou em busca da minha independência, de novas aventuras, sou fã de games e amo jogar vôlei. Atualmente sou estudande da trybe em desenvolvimento web </p>
+  <div>
+    <h1 id="meu-nome" class="meuNome">Luan Dos Santos Rodrigues</h1>
+    <div class="image-container">
+      <img id="minha-foto" src="eu.jpeg" alt="Foto de Luan">
+  <p= id="sobre-mim">Olá! eu sou Luan, tenho 20 anos. <br> <strong>Brasileiro, nascido e criado Nova União-Minas Gerais. <br> </strong>Filho da Celeste e do Nivaldo, estou em busca da minha independência, de novas aventuras, sou fã de games e amo jogar vôlei. <br> Atualmente sou estudande da trybe em desenvolvimento web </p>
+</div>
   <br><h2 class="minhas-habilidades">Minhas Habilidades</h2>
-  <ul id="habilidades">
+  <ul>
     <li class="comunicação">Boa comunicação</li>
     <li class="Trabalhoequipe">Trabalho em equipe</li>
     <li class="Proatividade">Proatividade</li>
